k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: gwadadasol/frontend-app:latest
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: frontend-app
  ports:
  - name: frontend-app
    protocol: TCP
    port: 80
    targetPort: 80
