k8s/recipes-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: recipesnpservice-srv
spec:
  type: NodePort
  selector: 
    app: recipesservice
  ports:
    - name: recipesservice
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
