k8s/ingress-wfdt-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wfdt-srv
  # annotations:
  #   nginx.ingress.kubernetes.io/use-regex: 'true'
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  # backend:
  #   serviceName: default-http-backend
  #   servicePort: 80
  rules:
    - host: wfdt.com
      http:
        paths:
          - path: /recipes
            pathType: Prefix
            backend:
              service:
                name: recipes-clusterip-srv
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-clusterip-srv
                port:
                  number: 80
